--- a/Training/index.html
+++ b/Training/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -19,9 +19,9 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/816758997473427497/1192571334388093050/image.png?ex=65a98f9b&is=65971a9b&hm=2cf0bcab4e3ebcd702d334bfe4282baa87723059d90d47a1dd3946d7c9aceb6a&">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1038272728991535124/1192657509761171547/ux_1.png?ex=65a9dfdc&is=65976adc&hm=268ec4a958dd999ed22529b0e478deb7cddc92d01ada19dad403ca866d1a24be&">
 
-    <title>VININHO BAITOLA</title>
+    <title>Aulas Front-End</title>
 
 </head>
 
