--- a/Training/index.html
+++ b/Training/index.html
@@ -27,11 +27,29 @@
 
 <body>
 
-    <div class="title">
+    <!-- <div class="title">
 
-        <h1 class="HW">
+        <h1>
             Hello, World!
         </h1>
+
+    </div> -->
+
+    <div class="aula">
+
+        <h1>
+            Nacionalidade
+        </h1>
+
+        <div class="box">
+            Digite seu país 
+            <input type="text" name="country" id="country">
+            <input type="submit" value="Verificar" onclick="calc()">
+        </div>
+
+        <div class="resposta">
+
+        </div>
 
     </div>
     
