--- a/Training/index.html
+++ b/Training/index.html
@@ -27,13 +27,13 @@
 
 <body>
 
-    <!-- <div class="title">
+    <div class="title">
 
         <h1>
             Hello, World!
         </h1>
 
-    </div> -->
+    </div>
 
     <div class="aula">
 
