--- a/Aulas/ex001/index.html
+++ b/Aulas/ex001/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1038272728991535124/1192657509761171547/ux_1.png?ex=65a9dfdc&is=65976adc&hm=268ec4a958dd999ed22529b0e478deb7cddc92d01ada19dad403ca866d1a24be&">
 
     <title>Exercício 001</title>
 </head>
