--- a/Projects/SevenShop/index.html
+++ b/Projects/SevenShop/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./style/global-style.css">
     <link rel="stylesheet" href="./style/products.css">
     <link rel="stylesheet" href="./style/media-queries.css">
-    <link rel="icon" href="./images/shopping-cart-1.png" type="image/png">
-
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1038272728991535124/1194852606141542511/b85fd099-a7b1-4560-91b7-cf1eed9d3849.jpg?ex=65b1dc34&is=659f6734&hm=5a56c235a6b6e2553eebce9bb3140fb129d84c01c241fecee7e59b192d079fee&" type="image/png">
+ 
     <title>Seven Shop</title>
 
 </head>
