--- a/Projects/SevenShop/index.html
+++ b/Projects/SevenShop/index.html
@@ -30,7 +30,7 @@
 
     <section class="container">
 
-        <div class="page">
+        <!-- <div class="page"> -->
 
     <!-- HEADER -->
 
@@ -66,13 +66,13 @@
                 <div class="content">
                     <ol class="products">
                         <li>
-                            <img class="img-offer" src="./images/ZeusX.png">
+                            <img class="img-offer" src="./images/G935.png">
                             <div class="description">
                                 <h4>
-                                    Headset Gamer Redragon Zeus X, Chroma Mk.II, RGB, Surround 7.1, USB.
+                                    Headset Gamer Sem Fio Logitech G935 7.1 Dolby Surround RGB LIGHTSYNC.
                                 </h4>
-                                <h5 class="old-price">R$435,28</h5>
-                                <h3 class="new-price">R$289,99</h3>
+                                <h5 class="old-price">R$999,99</h5>
+                                <h3 class="new-price">R$499,49</h3>
                                 <h6 class="pay">Á vista</h6>
                                 <div class="buy-button">
                                     <div class="icon-buy">
@@ -125,8 +125,8 @@
                             <h4>
                                 Processador AMD Ryzen 5 5500, 3.6GHz (4.2GHz Max Turbo), Cache 19MB, AM4.
                             </h4>
-                            <h5 class="old-price">R$435,28</h5>
-                            <h3 class="new-price">R$289,99</h3>
+                            <h5 class="old-price">R$889,99</h5>
+                            <h3 class="new-price">R$749,99</h3>
                             <h6 class="pay">Á vista</h6>
 
                             <div class="buy-button">
@@ -138,9 +138,27 @@
                             </div>
                         </div>
                         </li>
+                        <li>
+                            <img class="img-offer" src="./images/ZeusX.png">
+                            <div class="description">
+                                <h4>
+                                    Headset Gamer Redragon Zeus X, Chroma Mk.II, RGB, Surround 7.1, USB.
+                                </h4>
+                                <h5 class="old-price">R$435,28</h5>
+                                <h3 class="new-price">R$289,99</h3>
+                                <h6 class="pay">Á vista</h6>
+                                <div class="buy-button">
+                                    <div class="icon-buy">
+                                    <a href="#contacts">
+                                    <button class="buy">CONTATE-ME</button>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                     </ol>
                 </div>
-        </div>
+        <!-- </div> -->
     </section>
 
     <!-- FOOTER -->
