--- a/Projects/SevenShop/index.html
+++ b/Projects/SevenShop/index.html
@@ -69,7 +69,7 @@
                             <img class="img-offer" src="./images/G935.png">
                             <div class="description">
                                 <h4>
-                                    Headset Gamer Sem Fio Logitech G935 7.1 Dolby Surround RGB LIGHTSYNC.
+                                    Headset Gamer Sem Fio Logitech G935 7.1 Dolby Surround RGB LIGHTSYNC para PC, PlayStation, Xbox e Switch - 981-000742
                                 </h4>
                                 <h5 class="old-price">R$999,99</h5>
                                 <h3 class="new-price">R$499,49</h3>
