--- a/Projects/SevenShop/index.html
+++ b/Projects/SevenShop/index.html
@@ -87,7 +87,7 @@
                             <img class="img-offer" src="./images/ASUS850W.png">
                             <div class="description">
                                 <h4>
-                                    Fonte Asus Tuf Gaming, 850W, 80 Plus Gold, Bivolt, Preto, Full-Modular.
+                                    Fonte Gigabyte Ultra Durable, 850W, 80 Plus Gold, Modular, PFC Ativo, Bivolt, PCIE 5, Preto - GP-UD850GM PG5
                                 </h4>
                                 <h5 class="old-price">R$1.199,99</h5>
                                 <h3 class="new-price">R$999,99</h3>
@@ -123,7 +123,7 @@
                         <img class="img-offer" src="./images/R55500.png">
                         <div class="description">
                             <h4>
-                                Processador AMD Ryzen 5 5500, 3.6GHz (4.2GHz Max Turbo), Cache 19MB, AM4.
+                                Processador AMD Ryzen 5 5500, 3.6GHz (4.2GHz Max Turbo), Cache 19MB, AM4, Sem Vídeo - 100-100000457BOX
                             </h4>
                             <h5 class="old-price">R$889,99</h5>
                             <h3 class="new-price">R$749,99</h3>
@@ -142,7 +142,7 @@
                             <img class="img-offer" src="./images/ZeusX.png">
                             <div class="description">
                                 <h4>
-                                    Headset Gamer Redragon Zeus X, Chroma Mk.II, RGB, Surround 7.1, USB.
+                                    Headset Gamer Redragon Zeus X, Chroma Mk.II, RGB, Surround 7.1, USB, Drivers 53MM, Preto/Vermelho - H510-RGB
                                 </h4>
                                 <h5 class="old-price">R$435,28</h5>
                                 <h3 class="new-price">R$289,99</h3>
@@ -201,6 +201,8 @@
             </div>
 
     </footer>
+
+    <script src="main.js"></script>
 
 </body>
 </html>
