--- a/Projects/SevenShop/index.html
+++ b/Projects/SevenShop/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./style/media-queries.css">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1038272728991535124/1194852606141542511/b85fd099-a7b1-4560-91b7-cf1eed9d3849.jpg?ex=65b1dc34&is=659f6734&hm=5a56c235a6b6e2553eebce9bb3140fb129d84c01c241fecee7e59b192d079fee&" type="image/png">
  
-    <title>Seven Shop</title>
+    <title>Sevenshop</title>
 
 </head>
 
@@ -146,6 +146,96 @@
                                 </h4>
                                 <h5 class="old-price">R$435,28</h5>
                                 <h3 class="new-price">R$289,99</h3>
+                                <h6 class="pay">Á vista</h6>
+                                <div class="buy-button">
+                                    <div class="icon-buy">
+                                    <a href="#contacts">
+                                    <button class="buy">CONTATE-ME</button>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="img-offer" src="./images/RTX4060.png">
+                            <div class="description">
+                                <h4>
+                                    Placa de Vídeo RTX 4060 Ti VENTUS 3X 8G OC MSI NVIDIA GeForce, 8 GB GDDR6, DLSS, Ray Tracing
+                                </h4>
+                                <h5 class="old-price">R$3.222,21</h5>
+                                <h3 class="new-price">R$2.539,99</h3>
+                                <h6 class="pay">Á vista</h6>
+                                <div class="buy-button">
+                                    <div class="icon-buy">
+                                    <a href="#contacts">
+                                    <button class="buy">CONTATE-ME</button>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="img-offer" src="./images/PS5.png">
+                            <div class="description">
+                                <h4>
+                                    Console Playstation 5 Sony, SSD 825GB, Controle sem fio DualSense, Com Mídia Física, Branco - 1214A
+                                </h4>
+                                <h5 class="old-price">R$4.499,90</h5>
+                                <h3 class="new-price">R$3.858,57</h3>
+                                <h6 class="pay">Á vista</h6>
+                                <div class="buy-button">
+                                    <div class="icon-buy">
+                                    <a href="#contacts">
+                                    <button class="buy">CONTATE-ME</button>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="img-offer" src="./images/CadeiraGamer.png">
+                            <div class="description">
+                                <h4>
+                                    Cadeira Gamer Alpha Gamer Vega, Preto, Reclinável, com Almofadas, Cilindro de Gás Classe 4
+                                </h4>
+                                <h5 class="old-price">R$829,99</h5>
+                                <h3 class="new-price">R$599,90</h3>
+                                <h6 class="pay">Á vista</h6>
+                                <div class="buy-button">
+                                    <div class="icon-buy">
+                                    <a href="#contacts">
+                                    <button class="buy">CONTATE-ME</button>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="img-offer" src="./images/Monitor.png">
+                            <div class="description">
+                                <h4>
+                                    Monitor Gamer LG UltraGear 32 LED, 165 Hz, QHD, 1ms, HDMI/DisplayPort, 95% sRGB, FreeSync Premium, HDR 10, VESA, Preto - 32GN600-B
+                                </h4>
+                                <h5 class="old-price">R$2.105,25</h5>
+                                <h3 class="new-price">R$1.499,99</h3>
+                                <h6 class="pay">Á vista</h6>
+                                <div class="buy-button">
+                                    <div class="icon-buy">
+                                    <a href="#contacts">
+                                    <button class="buy">CONTATE-ME</button>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="img-offer" src="./images/MotoE13.png">
+                            <div class="description">
+                                <h4>
+                                    Smartphone Motorola Moto E13, 64GB, 4GB RAM, Octa Core, Câmera 13MP, Tela de 6.5, Off White - PAXV0011BR
+                                </h4>
+                                <h5 class="old-price">R$652,16</h5>
+                                <h3 class="new-price">R$569,99</h3>
                                 <h6 class="pay">Á vista</h6>
                                 <div class="buy-button">
                                     <div class="icon-buy">
