Toggle-White Theme v1

--- a/Projects/SevenShop/index.html
+++ b/Projects/SevenShop/index.html
@@ -26,15 +26,13 @@
 
 </head>
 
-<body>
+<body class="body">
 
     <section class="container">
 
-        <!-- <div class="page"> -->
-
     <!-- HEADER -->
 
-            <div class="header">
+            <header class="header">
                 <h1 class="title">
                     <a href="./index.html">
                     Sevenshop
@@ -57,7 +55,11 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+                <div class="theme">
+                    <input type="checkbox" id="theme_toggle" class="toggle">
+                    <label for="theme_toggle" class="toggle_button"></label>
+                </div>
+            </header>
 
         <div class="image"></div>
 
@@ -248,7 +250,6 @@
                         </li>
                     </ol>
                 </div>
-        <!-- </div> -->
     </section>
 
     <!-- FOOTER -->
