--- a/Project Calculator/index.html
+++ b/Project Calculator/index.html
@@ -37,62 +37,62 @@
                 <h1 class="numero">
                 </h1>
             </li>
-            <li class="AC">
-                <button onclick="AC()">C</button>
+            <li class="clean">
+                <button class="button-clean" onclick="clean()">C</button>
             </li>
-            <li class="sinal">
-                <button onclick="sinal()">+/-</button>
+            <li class="signal">
+                <button class="signal" onclick="signal()">+/-</button>
             </li>
-            <li class="porcentagem">
-                <button onclick="porcentagem()">%</button>
+            <li class="porcent">
+                <button class="porcent" onclick="porcent()">%</button>
             </li>
-            <li class="divisao">
-            <button class="div" onclick="divisao()">/</button>
+            <li class="division">
+            <button class="div" onclick="division()">/</button>
             </li>
-            <li class="sete">
-                <button onclick="usernum(7)">7</button>
+            <li class="seven">
+                <button class="button-seven" onclick="usernum(7)">7</button>
             </li>
-            <li class="oito">
-                <button onclick="usernum(8)">8</button>
+            <li class="eight">
+                <button class="button-eight" onclick="usernum(8)">8</button>
             </li>
-            <li class="nove">
-                <button onclick="usernum(9)">9</button>
+            <li class="nine">
+                <button class="button-nine" onclick="usernum(9)">9</button>
             </li>
-            <li class="multiplicacao">
-                <button class="mult" onclick="multiplicacao()">x</button>
+            <li class="multiply">
+                <button class="mult" onclick="multiply()">x</button>
             </li>
-            <li class="quatro">
-                <button onclick="usernum(4)">4</button>
+            <li class="four">
+                <button class="button-four" onclick="usernum(4)">4</button>
             </li>
-            <li class="cinco">
-                <button onclick="usernum(5)">5</button>
+            <li class="five">
+                <button class="button-five" onclick="usernum(5)">5</button>
             </li>
-            <li class="seis">
-                <button onclick="usernum(6)">6</button>
+            <li class="six">
+                <button class="button-six" onclick="usernum(6)">6</button>
             </li>
-            <li class="subtracao">
-                <button class="sub" onclick="subtracao()">-</button>
+            <li class="subtraction">
+                <button class="sub" onclick="subtraction()">-</button>
             </li>
-            <li class="um">
-                <button onclick="usernum(1)">1</button>
+            <li class="one">
+                <button class="button-one" onclick="usernum(1)">1</button>
             </li>
-            <li class="dois">
-                <button onclick="usernum(2)">2</button>
+            <li class="two">
+                <button class="button-two" onclick="usernum(2)">2</button>
             </li>
-            <li class="tres">
-                <button onclick="usernum(3)">3</button>
+            <li class="three">
+                <button class="button-three" onclick="usernum(3)">3</button>
             </li>
-            <li class="adicao">
-                <button class="add" onclick="adicao()">+</button>
+            <li class="addition">
+                <button class="add" onclick="addition()">+</button>
             </li>
             <li class="zero">
-                <button onclick="usernum(0)">0</button>
+                <button class="button-zero" onclick="usernum(0)">0</button>
             </li>
-            <li class="virgula">
-                <button onclick="virgula()">,</button>
+            <li class="comma">
+                <button class="button-comma" onclick="comma()">,</button>
             </li>
-            <li class="igualdade">
-                <button onclick="igualdade(), igual()">=</button>
+            <li class="equality">
+                <button class="button-equality" onclick="equality(), equal()">=</button>
             </li>
 
         </ol>
