--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Links -->
-    <link rel="stylesheet" href="./style/global-style.css">
-    <link rel="stylesheet" href="./style/products.css">
-    <link rel="stylesheet" href="./style/media-queries.css">
+    <link rel="stylesheet" href="./assets/style/global-style.css">
+    <link rel="stylesheet" href="./assets/style/products.css">
+    <link rel="stylesheet" href="./assets/style/media-queries.css">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1038272728991535124/1194852606141542511/b85fd099-a7b1-4560-91b7-cf1eed9d3849.jpg?ex=65b1dc34&is=659f6734&hm=5a56c235a6b6e2553eebce9bb3140fb129d84c01c241fecee7e59b192d079fee&" type="image/png">
  
     <title>Sevenshop</title>
@@ -71,7 +71,7 @@
         <div class="content">
             <ol class="products">
                 <li>
-                    <img class="img-offer" src="./images/G935.png">
+                    <img class="img-offer" src="./assets/images/G935.png">
                     <span class="description">
                         <h4>
                             Headset Gamer Sem Fio Logitech G935 7.1 Dolby Surround RGB LIGHTSYNC para PC, PlayStation, Xbox e Switch - 981-000742
@@ -81,7 +81,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -93,7 +93,7 @@
                     </span>
                 </li>
                 <li>
-                        <img class="img-offer" src="./images/ASUS850W.png">
+                        <img class="img-offer" src="./assets/images/ASUS850W.png">
                         <span class="description">
                             <h4>
                                 Fonte Gigabyte Ultra Durable, 850W, 80 Plus Gold, Modular, PFC Ativo, Bivolt, PCIE 5, Preto - GP-UD850GM PG5
@@ -103,7 +103,7 @@
                             <h6 class="pay">Á vista</h6>
 
                             <div class="buy-button">
-                                <img src="./images/shopping-cart-1.png">
+                                <img src="./assets/images/shopping-cart-1.png">
 
                                 <button class="buy">
                                     <a href="#contacts">
@@ -115,7 +115,7 @@
                         </span>
                 </li>
                 <li>
-                        <img class="img-offer" src="./images/A520M.png">
+                        <img class="img-offer" src="./assets/images/A520M.png">
                         <span class="description">
                             <h4>
                                 Placa Mãe GIGABYTE A520M S2H DDR4 SOCKET AM4 CHIPSET AMD A520.
@@ -125,7 +125,7 @@
                             <h6 class="pay">Á vista</h6>
 
                             <div class="buy-button">
-                                <img src="./images/shopping-cart-1.png">
+                                <img src="./assets/images/shopping-cart-1.png">
 
                                 <button class="buy">
                                     <a href="#contacts">
@@ -137,7 +137,7 @@
                         </span>
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/R55500.png">
+                    <img class="img-offer" src="./assets/images/R55500.png">
                     <span class="description">
                         <h4>
                             Processador AMD Ryzen 5 5500, 3.6GHz (4.2GHz Max Turbo), Cache 19MB, AM4, Sem Vídeo - 100-100000457BOX
@@ -147,7 +147,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -160,7 +160,7 @@
 
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/ZeusX.png">
+                    <img class="img-offer" src="./assets/images/ZeusX.png">
                     <span class="description">
                         <h4>
                             Headset Gamer Redragon Zeus X, Chroma Mk.II, RGB, Surround 7.1, USB, Drivers 53MM, Preto/Vermelho - H510-RGB
@@ -170,7 +170,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -182,7 +182,7 @@
                     </span>
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/RTX4060.png">
+                    <img class="img-offer" src="./assets/images/RTX4060.png">
                     <span class="description">
                         <h4>
                             Placa de Vídeo RTX 4060 Ti VENTUS 3X 8G OC MSI NVIDIA GeForce, 8 GB GDDR6, DLSS, Ray Tracing
@@ -192,7 +192,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -205,7 +205,7 @@
 
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/PS5.png">
+                    <img class="img-offer" src="./assets/images/PS5.png">
                     <span class="description">
                         <h4>
                             Console Playstation 5 Sony, SSD 825GB, Controle sem fio DualSense, Com Mídia Física, Branco - 1214A
@@ -215,7 +215,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -227,7 +227,7 @@
                     </span>
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/CadeiraGamer.png">
+                    <img class="img-offer" src="./assets/images/CadeiraGamer.png">
                     <span class="description">
                         <h4>
                             Cadeira Gamer Alpha Gamer Vega, Preto, Reclinável, com Almofadas, Cilindro de Gás Classe 4
@@ -237,7 +237,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -249,7 +249,7 @@
                     </span>
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/Monitor.png">
+                    <img class="img-offer" src="./assets/images/Monitor.png">
                     <span class="description">
                         <h4>
                             Monitor Gamer LG UltraGear 32 LED, 165 Hz, QHD, 1ms, HDMI/DisplayPort, 95% sRGB, FreeSync Premium, HDR 10, VESA, Preto - 32GN600-B
@@ -259,7 +259,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -271,7 +271,7 @@
                     </span>
                 </li>
                 <li>
-                    <img class="img-offer" src="./images/MotoE13.png">
+                    <img class="img-offer" src="./assets/images/MotoE13.png">
                     <span class="description">
                         <h4>
                             Smartphone Motorola Moto E13, 64GB, 4GB RAM, Octa Core, Câmera 13MP, Tela de 6.5, Off White - PAXV0011BR
@@ -281,7 +281,7 @@
                         <h6 class="pay">Á vista</h6>
 
                         <div class="buy-button">
-                            <img src="./images/shopping-cart-1.png">
+                            <img src="./assets/images/shopping-cart-1.png">
 
                             <button class="buy">
                                 <a href="#contacts">
@@ -317,7 +317,7 @@
 
                     <div class="submit">
                         <button class="input-submit" name="submit" type="submit"> 
-                            <img src="./images/mail-send-envelope.png">
+                            <img src="./assets/images/mail-send-envelope.png">
                             <p>CADASTRAR</p>
                         </button>
                     </div>
@@ -332,17 +332,17 @@
                 <h6>Contatos</h6>
 
                 <li>
-                    <div> <img src="./images/recording-tape-2.png"> </div>
+                    <div> <img src="./assets/images/recording-tape-2.png"> </div>
                     <span> <p>Telefone:</p> <a href="tel:+5541999999999"> (41) 99999-9999</a> </span>           
                 </li>
 
                 <li>
-                    <div> <img src="./images/whatsapp.png"> </div>
+                    <div> <img src="./assets/images/whatsapp.png"> </div>
                     <span> <p>Whatsapp:</p> <a href="https://web.whatsapp.com/send?phone=5541555555555" target="_blank"> (41) 55555-5555 </a> </span>
                 </li>
 
                 <li>
-                    <div> <img src="./images/mail-send-envelope.png"> </div>
+                    <div> <img src="./assets/images/mail-send-envelope.png"> </div>
                     <span> <p>Email:</p> <a href="mailto:suporte@sevenshop.com.br" target="blank"> suporte@sevenshop.com.br</a> </span>
                 </li>
 
@@ -352,8 +352,8 @@
 
     </footer>
 
-    <script src="./main.js"></script>
-    <script src="./script.js"></script>
+    <script src="./assets/main.js"></script>
+    <script src="./assets/script.js"></script>
 
 </body>
 </html>
