--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./assets/style/global-style.css">
     <link rel="stylesheet" href="./assets/style/products.css">
     <link rel="stylesheet" href="./assets/style/media-queries.css">
-    <link rel="icon" href="./assets/images/logo.jpg" >
+    <link rel="icon" href="./assets/images/icon.jpg" >
  
     <title>Sevenshop</title>
 
