--- a/index.html
+++ b/index.html
@@ -299,29 +299,28 @@
     <!-- FOOTER -->
 
     <footer>
-        <div class="email-collect">'
-            <div class="collect-content">
-                <div class="desc">
+        <div class="email-collect">
+            
+                <div class="collect-title">
                     <h6 class="subtitle">Sevenshop</h6>
                     <h5 class="offers">Receba ofertas</h5>
                 </div>
             
-                <form>
-                    <div class="name">
-                        <input class="input-name" name="name" type="text" placeholder="Qual é o seu nome?">
-                    </div>
+                <div class="collect-answers">
+                    <form class="answers-content">
 
-                    <div class="email">
-                        <input class="input-email" name="email" type="email" placeholder="Seu e-mail?">
-                    </div>
+                            <input class="input-name" name="name" type="text" placeholder="Qual é o seu nome?">
 
-                    <div class="submit">
-                        <button class="input-submit" name="submit" type="submit"> 
-                            <img src="./assets/images/mail-send-envelope.png">
-                            <p>CADASTRAR</p>
-                        </button>
-                    </div>
-                </form>
+                            <input class="input-email" name="email" type="email" placeholder="Seu e-mail?">
+
+
+                            <button class="input-submit" name="submit" type="submit"> 
+                                <img class="send" src="./assets/images/mail-send-envelope.png">
+                                <p>CADASTRAR</p>
+                            </button>
+
+                    </form>
+
             </div>
         </div>
 
