--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <img class="img-offer" src="./assets/images/G935.png">
                     <span class="description">
                         <h4>
-                            Headset Gamer Sem Fio Logitech G935 7.1 Dolby Surround RGB LIGHTSYNC para PC, PlayStation, Xbox e Switch - 981-000742
+                            Headset Gamer Sem Fio Logitech G935 7.1 Dolby Surround RGB LIGHTSYNC para PC, PlayStation, Xbox e Switch
                         </h4>
                         <h5 class="old-price">R$999,99</h5>
                         <h3>R$499,49</h3>
