--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </h1>
                     
                 <form class="search" method="get" action="">
-                    <input class="text" name="text" type="text" placeholder="Busque aqui...">
+                    <input class="text" name="text" type="search" placeholder="Busque aqui...">
                 </form>
             </div>
             
