--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./assets/style/main-media-queries.css">
     <link rel="icon" href="./assets/images/icon.jpg" >
  
-    <title>Sevenshop</title>
+    <title>Sevenshop | Store</title>
 
 </head>
 
@@ -35,7 +35,7 @@
         <header class="main_header">
             <div class="main_header-content">
                 <h1 class="title">
-                    <a href="./index.html">
+                    <a href="./login.html">
                     Sevenshop
                     </a>
                 </h1>
@@ -351,8 +351,8 @@
 
     </footer>
 
+    <script src="./assets/theme.js"></script>
     <script src="./assets/main.js"></script>
-    <script src="./assets/script.js"></script>
 
 </body>
 </html>
