--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./assets/style/login-style.css">
     <link rel="icon" href="./assets/images/icon.jpg" >
  
-    <title>Sevenshop</title>
+    <title>Login Sevenshop</title>
 
 </head>
 
@@ -34,11 +34,11 @@
                 <div class="login-main">
                     <span class="login-email">
                         <p>E-mail:</p>
-                        <input class="input-email" type="email" placeholder="Digite seu email">
+                        <input class="input-login-email" type="email" placeholder="Digite seu email">
                     </span>
                     <span class="login-senha">
                         <p>Senha:</p>
-                        <input class="input-password" type="password" placeholder="Digite sua senha">
+                        <input class="input-login-password" type="password" placeholder="Digite sua senha">
                     </span>
                     <span class="other-helps">
                         <div class="login-remember">
@@ -49,16 +49,17 @@
                     </span>
                 </div>
 
-                <div class="login-desc">
-                    <span class="register">
-                        <div class="register-content">
+                <div class="cadaster-desc">
+                    <span class="cadaster">
+                        <div class="cadaster-content">
                             <p>Ainda não tem um conta?</p>
-                            <a href="main.html">registre-se</a>
+                            <a href="cadaster.html">cadastrar</a>
                         </div>
                     </span>
 
                     <span class="login-submit">
-                        <input class="input-submit" type="submit" value="ENTRAR">
+                        <button class="input-login-submit" type="submit">
+                            <p>ENTRAR</p>
                     </span>
                 </div>
             </form>
@@ -70,8 +71,7 @@
 
     </footer>
 
-    <script src="./assets/main.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/login.js"></script>
 
 </body>
 </html>
