--- a/cadaster.html
+++ b/cadaster.html
@@ -46,7 +46,7 @@
                     <span class="login">
                         <div class="login-content">
                             <p>Já possui uma conta?</p>
-                            <a href="login.html">login</a>
+                            <a href="index.html">login</a>
                         </div>
                     </span>
 
