--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
         <header class="main_header">
             <div class="main_header-content">
                 <h1 class="title">
-                    <a href="./login.html">
+                    <a href="./index.html">
                     Sevenshop
                     </a>
                 </h1>
