--- a/cadaster.html
+++ b/cadaster.html
@@ -18,6 +18,7 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./assets/style/cadaster-style.css">
+    <link rel="stylesheet" href="./assets/style/cadaster-media-queries.css">
     <link rel="icon" href="./assets/images/icon.jpg" >
  
     <title>Cadastro Sevenshop</title>
@@ -46,7 +47,7 @@
                     <span class="login">
                         <div class="login-content">
                             <p>Já possui uma conta?</p>
-                            <a href="index.html">login</a>
+                            <a href="index.html"><u>LOGIN</u></a>
                         </div>
                     </span>
 
