--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./assets/style/login-style.css">
+    <link rel="stylesheet" href="./assets/style/login-media-queries.css">
     <link rel="icon" href="./assets/images/icon.jpg" >
  
     <title>Login Sevenshop</title>
@@ -41,10 +42,7 @@
                         <input class="input-login-password" type="password" placeholder="Digite sua senha">
                     </span>
                     <span class="other-helps">
-                        <div class="login-remember">
-                            <input type="checkbox">
-                            <p>Lembrar-me</p>
-                        </div>
+
                         <a href="main.html">Esqueceu sua senha?</a>
                     </span>
                 </div>
@@ -53,7 +51,7 @@
                     <span class="cadaster">
                         <div class="cadaster-content">
                             <p>Ainda não tem um conta?</p>
-                            <a href="cadaster.html">cadastrar</a>
+                            <a href="cadaster.html"><u>CADASTRAR</u></a>
                         </div>
                     </span>
 
