--- a/cadaster.html
+++ b/cadaster.html
@@ -47,7 +47,7 @@
                     <span class="login">
                         <div class="login-content">
                             <p>Já possui uma conta?</p>
-                            <a href="index.html"><u>LOGIN</u></a>
+                            <a href="index.html">LOGIN</a>
                         </div>
                     </span>
 
