--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="cadaster-desc">
                     <span class="cadaster">
                         <div class="cadaster-content">
-                            <p>Ainda não tem um conta?</p>
-                            <a href="cadaster.html"><u>CADASTRAR</u></a>
+                            <p>Ainda não tem uma conta?</p>
+                            <a href="cadaster.html">CADASTRAR</a>
                         </div>
                     </span>
 
