--- a/cadaster.html
+++ b/cadaster.html
@@ -35,11 +35,15 @@
                 <div class="cadaster-main">
                     <div class="cadaster-email">
                         <p>E-mail:</p>
-                        <input class="input-cadaster-email" type="email" placeholder="Digite seu email">
+                        <input class="input-cadaster-email" type="email" placeholder="Digite seu email...">
                     </div>
                     <div class="cadaster-senha">
                         <p>Senha:</p>
-                        <input class="input-cadaster-password" type="password" placeholder="Digite sua senha">
+                        <input class="input-cadaster-password" type="password" placeholder="Crie uma senha...">
+                    </div>
+                    <div class="cadaster-confirm-senha">
+                        <p>Confirme a senha:</p>
+                        <input class="input-confirm-password" type="password" placeholder="Repita a senha...">
                     </div>
                 </div>
 
